Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL)
-
None
Description
Upd: See Roel's comment for a test case.
|
10.4 4edb29380c9 |
mysqld: /home/travis/src/storage/innobase/handler/handler0alter.cc:5690: bool innobase_instant_try(const Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*): Assertion `!"wrong page type"' failed.
|
190120 22:00:51 [ERROR] mysqld got signal 6 ;
|
 |
/lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7fd67eaf1c82]
|
/home/travis/server/bin/mysqld(+0x1d5d7d4)[0x55c8a1f2e7d4]
|
handler/handler0alter.cc:5695(innobase_instant_try(Alter_inplace_info const*, ha_innobase_inplace_ctx*, TABLE const*, TABLE const*, trx_t*))[0x55c8a1f6e80b]
|
handler/handler0alter.cc:10160(commit_try_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, TABLE*, TABLE const*, trx_t*, char const*))[0x55c8a1f4e097]
|
handler/handler0alter.cc:10793(ha_innobase::commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool))[0x55c8a19c864e]
|
sql/handler.cc:4493(handler::ha_commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool))[0x55c8a14b3fb4]
|
sql/sql_table.cc:7590(mysql_inplace_alter_table(THD*, TABLE_LIST*, TABLE*, TABLE*, Alter_inplace_info*, enum_alter_inplace_result, MDL_request*, Alter_table_ctx*))[0x55c8a14c085e]
|
sql/sql_table.cc:9688(mysql_alter_table(THD*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, HA_CREATE_INFO*, TABLE_LIST*, Alter_info*, unsigned int, st_order*, bool))[0x55c8a16015ea]
|
sql/sql_alter.cc:497(Sql_cmd_alter_table::execute(THD*))[0x55c8a12b8346]
|
sql/sql_parse.cc:6314(mysql_execute_command(THD*))[0x55c8a12c2b9a]
|
sql/sql_parse.cc:8116(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55c8a129d915]
|
sql/sql_parse.cc:1854(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55c8a129aaad]
|
sql/sql_parse.cc:1397(do_command(THD*))[0x55c8a15f272f]
|
sql/sql_connect.cc:1402(do_handle_one_connection(CONNECT*))[0x55c8a15f210c]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7fd67f7366ba]
|
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fd67ebcb41d]
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x62b00015e288): ALTER ONLINE TABLE `t014` /*!100301 */ DROP COLUMN IF EXISTS `col_int_nokey`, ALGORITHM=INPLACE /* QNO 5151 CON_ID 19 */
|
Connection ID (thread ID): 19
|
Status: NOT_KILLED
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on
|
|
elenst-jira-refs 19e81706f Toolbox: dbef832b2 |
perl ./runall-new.pl --basedir=/home/travis/server --vardir=/home/travis/logs/vardir --duration=350 --threads=6 --seed=1548021243 --short-column-names --reporters=Backtrace,ErrorLog,Deadlock --validators=TransformerNoComparator --transformers=ExecuteAsExecuteImmediate,ExecuteAsInsertSelect,ExecuteAsUpdateDelete --redefine=conf/mariadb/alter_table.yy --redefine=conf/mariadb/instant_add.yy --redefine=conf/mariadb/modules/alter_table_columns.yy --redefine=conf/mariadb/modules/alter_table_indexes.yy --redefine=conf/mariadb/bulk_insert.yy --redefine=conf/mariadb/modules/admin.yy --redefine=conf/mariadb/modules/foreign_keys.yy -redefine=conf/mariadb/modules/locks.yy --redefine=conf/mariadb/modules/sql_mode.yy --redefine=conf/mariadb/redefine_temporary_tables.yy --redefine=conf/mariadb/versioning.yy --redefine=conf/mariadb/sequences.yy --mysqld=--log_output=FILE --mysqld=--max-statement-time=15 --mysqld=--lock-wait-timeout=10 --mysqld=--loose-innodb-lock-wait-timeout=5 --mysqld=--loose-debug_assert_on_not_freed_memory=0 --mysqld=--innodb-buffer-pool-size=2G --grammar=conf/partitioning/partitions.yy --gendata=conf/mariadb/innodb.zz --filter=/home/travis/mariadb-toolbox/travis/10.4-combo-filter-asan.ff --mysqld=--innodb-page-size=8K
|
Not reproducible so far, hitting MDEV-18321 instead.
Attachments
Issue Links
- relates to
-
MDEV-26141 Crash in instant ALTER TABLE after IMPORT TABLESPACE
-
- Confirmed
-
-
MDEV-29034 Assertion (o->ind == vers_start) upon inplace ALTER with virtual columns
-
- Closed
-